--- a/bg.lproj/Localizable.strings
+++ b/bg.lproj/Localizable.strings
@@ -6,185 +6,184 @@
   Copyright © 2025 Andrey Tsarkov. All rights reserved.
 */
 
-"Unable to process image..." = "Unable to process image...";
+"Unable to process image..." = "Изображението не може да се обработи...";
 "Check available memory and disk space. Try closing other apps and restarting Pixea." = "Проверете наличната памет и дисковото пространство. Опитайте да затворите други приложения и да рестартирате Pixea.";
 "OK" = "OK";
-"Cancel" = "Cancel";
-"macOS 11 or higher is required." = "macOS 11 or higher is required.";
-"macOS 10.15 or higher is required." = "macOS 10.15 or higher is required.";
-"Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool." = "Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool.";
-"Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool." = "Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool.";
-"Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling." = "Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling.";
-"No media" = "No media";
-"No supported media in this folder" = "No supported media in this folder";
-"Are you sure you want to move this folder to Trash?" = "Are you sure you want to move this folder to Trash?";
-"Are you sure you want to move this file to Trash?" = "Are you sure you want to move this file to Trash?";
-"This folder cannot be moved to Trash. Are you sure you want to delete it permanently?" = "This folder cannot be moved to Trash. Are you sure you want to delete it permanently?";
-"This file cannot be moved to Trash. Are you sure you want to delete it permanently?" = "This file cannot be moved to Trash. Are you sure you want to delete it permanently?";
-"\"%@\" will be moved to the Trash." = "\"%@\" will be moved to the Trash.";
-"\"%@\" will be deleted immediately. You can’t undo this action." = "\"%@\" will be deleted immediately. You can’t undo this action.";
-"Move To Trash" = "Move To Trash";
-"Delete" = "Delete";
-"Unable to delete '%@'" = "Unable to delete '%@'";
-"Check permissions or try again later." = "Check permissions or try again later.";
-"Drop your media here" = "Drop your media here";
-"Drop Image/Video file, Folder or Zip-Archive to start" = "Drop Image/Video file, Folder or Zip-Archive to start";
-"Favorites" = "Favorites";
-"Recents" = "Recents";
-"Archived Media" = "Archived Media";
-"Media in this Folder" = "Media in this Folder";
-"Subfolders in this Archive" = "Subfolders in this Archive";
-"Subfolders and Archives" = "Subfolders and Archives";
-"Images: %lu" = "Images: %lu";
-"Images: %lu, Videos: %lu" = "Images: %lu, Videos: %lu";
-"Folders: %lu" = "Folders: %lu";
-"Folders: %lu, Archives: %lu" = "Folders: %lu, Archives: %lu";
-"Can't open" = "Can't open";
-"Unable to open this image file" = "Unable to open this image file";
-"Unable to open this video file" = "Unable to open this video file";
-"Unable to open this archive" = "Unable to open this archive";
-"No media" = "No media";
-"No supported media in this archive" = "No supported media in this archive";
-"No supported media in this folder" = "No supported media in this folder";
-"Nothing found" = "Nothing found";
-"Sorry, no matches found for '%@'" = "Sorry, no matches found for '%@'";
-"Image was edited" = "Image was edited";
-"You can choose to export the edited image, or ignore changes. You can’t undo this action." = "You can choose to export the edited image, or ignore changes. You can’t undo this action.";
-"Export Image..." = "Export Image...";
-"Export Image" = "Export Image";
-"Best" = "Best"; //export jpeg quality
-"Lossless" = "Lossless";
-"Ignore Changes" = "Ignore Changes";
-"Unable to process image..." = "Unable to process image...";
-"Unable to find your purchase..." = "Unable to find your purchase...";
-"Check your Apple Account or try again later." = "Check your Apple Account or try again later.";
-"No applications" = "No applications";
+"Cancel" = "Отказ";
+"macOS 11 or higher is required." = "Изисква се macOS 11 или по-висока версия.";
+"macOS 10.15 or higher is required." = "Изисква се macOS 10.15 или по-висока версия.";
+"Object Removal algorithm is based on Machine Learning features first introduced with macOS Big Sur. Update your macOS to use Object Removal tool." = "Алгоритъмът за премахване на обекти се основава на функции за машинно обучение, въведени за първи път в macOS Big Sur. Актуализирайте своята macOS, за да използвате инструмента за премахване на обекти.";
+"Text Selection is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Text Selection Tool." = "Изборът на текст се основава на функцията за машинно обучение, въведена за първи път в macOS Catalina. Актуализирайте своята macOS, за да използвате инструмента за избор на текст.";
+"Image Upscaling is based on Machine Learning functionality first introduced with macOS Catalina. Update your macOS to use Image Upscaling." = "Увеличаването на мащаба на изображението се основава на функцията за машинно обучение, въведена за първи път в macOS Catalina. Актуализирайте своята macOS, за да използвате възможността за увеличаване на мащаба на изображенията.";
+"No media" = "Няма медия";
+"No supported media in this folder" = "Няма поддържана медия в тази папка";
+"Are you sure you want to move this folder to Trash?" = "Сигурни ли сте, че искате да преместите тази папка в кошчето?";
+"Are you sure you want to move this file to Trash?" = "Сигурни ли сте, че искате да преместите този файл в кошчето?";
+"This folder cannot be moved to Trash. Are you sure you want to delete it permanently?" = "Тази папка не може да бъде преместена в кошчето. Сигурни ли сте, че искате да я изтриете окончателно?";
+"This file cannot be moved to Trash. Are you sure you want to delete it permanently?" = "Този файл не може да бъде преместен в кошчето. Сигурни ли сте, че искате да го изтриете окончателно?";
+"\"%@\" will be moved to the Trash." = "\"%@\" ще бъдат преместени в кошчето.";
+"\"%@\" will be deleted immediately. You can’t undo this action." = "\"%@\" ще бъдат изтрити незабавно. Не можете да върнете това действие.";
+"Move To Trash" = "Преместване към кошчето";
+"Delete" = "Изтрий";
+"Unable to delete '%@'" = "Невъзможно е да се изтрие '%@'";
+"Check permissions or try again later." = "Проверете разрешенията или опитайте отново по-късно.";
+"Drop your media here" = "Пуснете вашите медийни файлове тук";
+"Drop Image/Video file, Folder or Zip-Archive to start" = "Пуснете изображение/видео файл, папка или архив Zip, за да започнете";
+"Favorites" = "Любими";
+"Recents" = "Скорошни";
+"Archived Media" = "Архивирани медийни файлове";
+"Media in this Folder" = "Медия в тази папка";
+"Subfolders in this Archive" = "Подпапки в този архив";
+"Subfolders and Archives" = "Подпапки и Архиви";
+"Images: %lu" = "Изображения: %lu";
+"Images: %lu, Videos: %lu" = "Изображения: %lu, Видеа: %lu";
+"Folders: %lu" = "Папки: %lu";
+"Folders: %lu, Archives: %lu" = "Папки: %lu, Архиви: %lu";
+"Can't open" = "Не мога да отворя";
+"Unable to open this image file" = "Не мога да отворя това изображение";
+"Unable to open this video file" = "Не мога да отворя това видео";
+"Unable to open this archive" = "Не мога да отворя този архив";
+"No media" = "Няма медийни файлове";
+"No supported media in this archive" = "Няма поддържани медийни файлове в този архив";
+"No supported media in this folder" = "Няма поддържани медийни файлове в тази папка";
+"Nothing found" = "Нищо не е намерено";
+"Sorry, no matches found for '%@'" = "Съжаляваме, не са намерени съвпадения за '%@'";
+"Image was edited" = "Изображението беше редактирано ";
+"You can choose to export the edited image, or ignore changes. You can’t undo this action." = "Можете да изберете да експортирате редактираното изображение или да игнорирате промените. Не можете да отмените това действие.";
+"Export Image..." = "Експортиране на изображение...";
+"Export Image" = "Експортиране на изображение";
+"Best" = "Най-доброто"; //export jpeg quality
+"Lossless" = "Без загуба";
+"Ignore Changes" = "Игнориране на промените";
+"Unable to process image..." = "Не може да се обработи изображението...";
+"Unable to find your purchase..." = "Покупката ви не може да бъде намерена...";
+"Check your Apple Account or try again later." = "Проверете акаунта си в Apple или опитайте отново по-късно.";
+"No applications" = "Няма заявки"; //to check if Заявки or meaning like Application?
 
-"Preparing..." = "Preparing...";
-"Removing objects..." = "Removing objects...";
-"Processing transparency..." = "Processing transparency...";
-"Upscaling image..." = "Upscaling image...";
-"Loading..." = "Loading...";
-"Stopping..." = "Stopping..."; //Stopping upscaling process
-"Processing '%@'..." = "Processing '%@'..."; //Saving file
+"Preparing..." = "Подготовка...";
+"Removing objects..." = "Премахване на обекти...";
+"Processing transparency..." = "Обработва се прозрачността...";
+"Upscaling image..." = "Премащабиране на изображение...";
+"Loading..." = "Зарежда се...";
+"Stopping..." = "Спиране..."; //Stopping upscaling process
+"Processing '%@'..." = "Обработва се '%@'..."; //Saving file
 
-"Created: %@" = "Created: %@"; //file created
-"Taken: %@" = "Taken: %@"; //photo taken
-"Resume at %@" = "Resume at %@"; //resume movie at timestamp
-"Frames" = "Frames"; //gif frames
+"Created: %@" = "Създаден: %@"; //file created
+"Taken: %@" = "Заснет: %@"; //photo taken
+"Resume at %@" = "Възобновяване в %@"; //resume movie at timestamp
+"Frames" = "Кадри"; //gif frames
 
 
-"Grant Access" = "Grant Access";
-"No access" = "No access";
-"Access granted" = "Access granted";
-"Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue." = "Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue.";
-"**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions." = "**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions.";
+"Grant Access" = "Предоставяне на достъп";
+"No access" = "Няма достъп";
+"Access granted" = "Достъпът е разрешен";
+"Pixea needs write permissions to delete '%@'. Click \"Grant Access\" to continue." = "Pixea се нуждае от права за запис, за да изтрие '%@'. Щракнете върху \„Предоставяне на достъп\“, за да продължите.";
+"**SPACE** is reserved for \"**Hold Spacebar and Drag to Scroll**\" and \"**Play / Pause Video**\" actions. **Z** and **⌥Z** are reserved for \"**Zoom In**\" / \"**Zoom Out**\" actions." = "**ИНТЕРВАЛ** е запазен за действия \"**Задръжте интервал и плъзнете за превъртане**\" и \"**Възпроизвеждане / Пауза на видео**\". **Z** и **⌥Z** са запазени за действия \"**Увеличаване**\" / \"**Намаляване**\".;
 
-"Clipboard" = "Clipboard";
-"Unmute" = "Unmute";
-"Mute" = "Mute";
-"Track %i - [%@]" = "Track %i - [%@]"; //track 1 - [spanish]
-"Track %i" = "Track %i";
+"Clipboard" = "Клипбоарда";
+"Unmute" = "Отмяна на звука";
+"Mute" = "Изключване на звука";
+"Track %i - [%@]" = "Песен %i - [%@]"; //track 1 - [spanish]
+"Track %i" = "Песен %i";
 
-"Next" = "Next"; //button on welcome screen
-"Done" = "Done";
+"Next" = "Следващ"; //button on welcome screen
+"Done" = "Готово";
 
-"Small" = "Small";
-"Large" = "Large";
-"Regular" = "Regular";
+"Small" = "Малък";
+"Large" = "Голям";
+"Regular" = "Редовно"; //редовен_нормален? i18n testing_optimization
 
 //touch bar items
-"Open File or Folder..." = "Open File or Folder...";
-"Recent:" = "Recent:";
-"New from Clipboard" = "New from Clipboard";
+"Open File or Folder..." = "Отворете файл или папка...";
+"Recent:" = "Текущ:";
+"New from Clipboard" = "Ново от клипборда";
 
 //shortcuts
-"Scroll Up" = "Scroll Up";
-"Scroll Down" = "Scroll Down";
-"Scroll Left" = "Scroll Left";
-"Scroll Right" = "Scroll Right";
-"Previous Media" = "Previous Media";
-"Next Media" = "Next Media";
-"Previous Frame/Step Backward 10s" = "Previous Frame/Step Backward 10s";
-"Next Frame/Step Forward 10s" = "Next Frame/Step Forward 10s";
-"Step Backward 30s" = "Step Backward 30s";
-"Step Forward 30s" = "Step Forward 30s";
-"Volume Up" = "Volume Up";
-"Volume Down" = "Volume Down";
-"Mute/Unmute" = "Mute/Unmute";
-"Slideshow" = "Slideshow";
-"Zoom In" = "Zoom In";
-"Zoom Out" = "Zoom Out";
-"Fit to Screen" = "Fit to Screen";
-"Stretch to Fit" = "Stretch to Fit";
-"Fill Screen" = "Fill Screen";
-"Toggle Fullscreen" = "Toggle Fullscreen";
-"Actual Size" = "Actual Size";
-"Fixed Size & Position" = "Fixed Size & Position";
-"Playback Speed x 0.5" = "Playback Speed x 0.5";
-"Playback Speed x 0.9" = "Playback Speed x 0.9";
-"Playback Speed Normal" = "Playback Speed Normal";
-"Playback Speed x 1.1" = "Playback Speed x 1.1";
-"Playback Speed x 1.5" = "Playback Speed x 1.5";
-"Playback Speed x 2.0" = "Playback Speed x 2.0";
-"Rotate 180º" = "Rotate 180º";
-"Rotate 90º Clockwise" = "Rotate 90º Clockwise";
-"Rotate 90º Counter-clockwise" = "Rotate 90º Counter-clockwise";
-"Upscale Image" = "Upscale Image";
-"Eraser Tool" = "Eraser Tool";
-"Flip Horizontally" = "Flip Horizontally";
-"Flip Vertically" = "Flip Vertically";
-"Selection Tool" = "Selection Tool";
-"Deselect" = "Deselect";
-"Show Thumbnails" = "Show Thumbnails";
-"Get Info" = "Get Info";
-"Move to Trash" = "Move to Trash";
-"Show in Finder" = "Show in Finder";
-"Export..." = "Export...";
-"Crop Image..." = "Crop Image...";
-"Hand Tool" = "Hand Tool";
-"Adjust Hue, Saturation, Brightness..." = "Adjust Hue, Saturation, Brightness...";
-"Adjust Color Temperature..." = "Adjust Color Temperature...";
-"Adjust Exposure..." = "Adjust Exposure...";
-"Resize Image..." = "Resize Image...";
-"Sharpness and Noise..." = "Sharpness and Noise...";
-"Clone Tool" = "Clone Tool";
-"Text Selection Tool" = "Text Selection Tool";
-"Edit with: App #1" = "Edit with: App #1";
-"Edit with: App #2" = "Edit with: App #2";
-"Edit with: App #3" = "Edit with: App #3";
-"Edit with: App #4" = "Edit with: App #4";
-"Edit with: App #5" = "Edit with: App #5";
-"Step Forward 10s" = "Step Forward 10s";
-"Step Backward 10s" = "Step Backward 10s";
-"Step Forward 30s" = "Step Forward 30s";
-"Step Backward 30s" = "Step Backward 30s";
-"Hide Thumbnails" = "Hide Thumbnails";
-"Show Thumbnails" = "Show Thumbnails";
-"Next Frame" = "Next Frame";
-"Previous Frame" = "Previous Frame";
-"Next Media" = "Next Media";
-"Previous Media" = "Previous Media";
-"Not set" = "Not set";
+"Scroll Up" = "Превъртете нагоре";
+"Scroll Down" = "Превъртете надолу";
+"Scroll Left" = "Превъртете наляво";
+"Scroll Right" = "Превъртете надясно";
+"Previous Media" = "Предишна медия";
+"Next Media" = "Следваща медия";
+"Previous Frame/Step Backward 10s" = "Предишен кадър/Стъпка назад 10 сек";
+"Next Frame/Step Forward 10s" = "Предишен кадър/Стъпка напред 10 сек";
+"Step Backward 30s" = "Стъпка назад 30 сек";
+"Step Forward 30s" = "Стъпка напред 30 сек";
+"Volume Up" = "Увеличаване на звука";
+"Volume Down" = "Намаляване на звука";
+"Mute/Unmute" = "Без звук/Включване на звука";
+"Slideshow" = "Слайдшоу";
+"Zoom In" = "Увеличаване";
+"Zoom Out" = "Намаляване";
+"Fit to Screen" = "Побиране в екрана";
+"Stretch to Fit" = "Разтегнете, за да се побере";
+"Fill Screen" = "Запълване на екрана";
+"Toggle Fullscreen" = "Превключване на цял екран";
+"Actual Size" = "Действителен размер";
+"Fixed Size & Position" = "Фиксиран размер и Позиция";
+"Playback Speed x 0.5" = "Скорост на възпроизвеждане x 0.5";
+"Playback Speed x 0.9" = "Скорост на възпроизвеждане x 0.9";
+"Playback Speed Normal" = "Нормална скорост на възпроизвеждане";
+"Playback Speed x 1.1" = "Скорост на възпроизвеждане x 1.1";
+"Playback Speed x 1.5" = "Скорост на възпроизвеждане x 1.5";
+"Playback Speed x 2.0" = "Скорост на възпроизвеждане x 2.0";
+"Rotate 180º" = "Завъртете 180º";
+"Rotate 90º Clockwise" = "Завъртете 90º по часовниковата стрелка";
+"Rotate 90º Counter-clockwise" = "Завъртете 90º обратно на часовниковата стрелка";
+"Upscale Image" = "Премащабиране на изображение";
+"Eraser Tool" = "Инструмент за изтриване";
+"Flip Horizontally" = "Обърнете хоризонтално";
+"Flip Vertically" = "Обърнете вертикално";
+"Selection Tool" = "Инструмент за избор";
+"Deselect" = "Премахване на избора";
+"Show Thumbnails" = "Показване на миниатюри";
+"Get Info" = "Получете информация";
+"Move to Trash" = "Преместване в кошчето";
+"Show in Finder" = "Показване във Finder";
+"Export..." = "Експортиране...";
+"Crop Image..." = "Изрязване на изображението...";
+"Hand Tool" = "Инструмент ръчичка"; //perhaps hand to be replaced as wording i18n testing_optimization
+"Adjust Hue, Saturation, Brightness..." = "Регулирайте нюанса, наситеността, яркостта...";
+"Adjust Color Temperature..." = "Регулиране на температурата на цвета...";
+"Adjust Exposure..." = "Регулиране на експозицията...";
+"Resize Image..." = "Преоразмеряване на изображението...";
+"Sharpness and Noise..." = "Острота и шум...";
+"Clone Tool" = "Инструмент за клониране";
+"Text Selection Tool" = "Инструмент за избор на текст";
+"Edit with: App #1" = "Редактиране чрез Приложение: #1";
+"Edit with: App #2" = "Редактиране чрез Приложение: #2";
+"Edit with: App #3" = "Редактиране чрез Приложение: #3";
+"Edit with: App #4" = "Редактиране чрез Приложение: #4";
+"Edit with: App #5" = "Редактиране чрез Приложение: #5";
+"Step Forward 10s" = "Стъпка напред 10 сек";
+"Step Backward 10s" = "Стъпка назад 10 сек";
+"Step Forward 30s" = "Стъпка напред 30 сек";
+"Step Backward 30s" = "Стъпка назад 30 сек";
+"Hide Thumbnails" = "Скриване на миниатюри";
+"Show Thumbnails" = "Показване на миниатюри";
+"Next Frame" = "Следващ кадър";
+"Previous Frame" = "Предишен кадър";
+"Next Media" = "Следващ медия файл";
+"Previous Media" = "Предишен медия файл";
+"Not set" = "Не е зададено";
 
 // Preferences items
-"Preferences" = "Preferences";
-"General" = "General";
-"Appearance" = "Appearance";
-"Shortcuts" = "Shortcuts";
-"File Types" = "File Types";
-"Video" = "Video";
-"Folder Access" = "Folder Access";
-"Advanced" = "Advanced";
-"More Apps" = "More Apps";
+"Preferences" = "Преференции";
+"General" = "Общ";
+"Shortcuts" = "Клавишни комбинации"; //Преки пътища review via i18n testing_optimization
+"File Types" = "Тип файлове";
+"Video" = "Видео";
+"Folder Access" = "Достъп до папка";
+"Advanced" = "Разширено";
+"More Apps" = "Още приложения";
 
 
 // inches, cm/mm, pixels, points per inch, etc...
-"in" = "in";
-"mm" = "mm";
-"cm" = "cm";
+"in" = "инча";
+"mm" = "мм";
+"cm" = "см";
 "px" = "px";
 "%ipx × %ipx" = "%ipx × %ipx";
 "%ipx × %ipx (%ippi)" = "%ipx × %ipx (%ippi)";
-"%@ bytes" = "%@ bytes";
-"%li sec" = "%li sec";
+"%@ bytes" = "%@ байта";
+"%li sec" = "%li сек";
