--- a/bg.lproj/preferencesShortcutsViewController.strings
+++ b/bg.lproj/preferencesShortcutsViewController.strings
@@ -1,24 +1,24 @@
 
 /* Class = "NSTextFieldCell"; title = "Customize Pixea shortcuts:"; ObjectID = "9KK-3t-xZD"; */
-"9KK-3t-xZD.title" = "Customize Pixea shortcuts:";
+"9KK-3t-xZD.title" = "Персонализиране на клавишни комбинации в Pixea:";
 
 /* Class = "NSTableColumn"; headerCell.title = "Folder"; ObjectID = "UZU-so-m59"; */
-"UZU-so-m59.headerCell.title" = "Folder";
+"UZU-so-m59.headerCell.title" = "Папка";
 
 /* Class = "NSTextFieldCell"; title = "Next Image"; ObjectID = "VUf-W6-3O0"; */
-"VUf-W6-3O0.title" = "Next Image";
+"VUf-W6-3O0.title" = "Следващо изображение";
 
 /* Class = "NSButtonCell"; title = "PLUS"; ObjectID = "m9I-Wa-c89"; */
-"m9I-Wa-c89.title" = "PLUS";
+"m9I-Wa-c89.title" = "ПЛЮС";
 
 /* Class = "NSTextFieldCell"; title = "Text Cell"; ObjectID = "pva-Kw-3Xm"; */
-"pva-Kw-3Xm.title" = "Text Cell";
+"pva-Kw-3Xm.title" = "Клетка за текст";
 
 /* Class = "NSTextFieldCell"; title = "SPACE is reserved for \"Hold Spacebar and Drag to Scroll\" and \"Play / Pause Video\" actions. Z and ⌥Z are reserved for \"Zoom In\" / \"Zoom Out\" actions."; ObjectID = "r8b-mT-VMR"; */
-"r8b-mT-VMR.title" = "SPACE is reserved for \"Hold Spacebar and Drag to Scroll\" and \"Play / Pause Video\" actions. Z and ⌥Z are reserved for \"Zoom In\" / \"Zoom Out\" actions.";
+"r8b-mT-VMR.title" = "ИНТЕРВАЛЪТ е запазен за \"Задръжте интервал и плъзнете, за да превъртите\" и \"Възпроизвеждане / пауза на видео\" действията. Z и ⌥Z са запазени за \"Увеличаване\" / \"Намаляване \" като действия.";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "wqY-nK-Suo"; */
-"wqY-nK-Suo.title" = "Box";
+"wqY-nK-Suo.title" = "Каре";
 
 /* Class = "NSButtonCell"; title = "Swipe left/right to show previous/next image"; ObjectID = "xDv-OG-qlV"; */
-"xDv-OG-qlV.title" = "Swipe left/right to show previous/next image";
+"xDv-OG-qlV.title" = "Плъзнете наляво/надясно, за да покажете предишно/следващо изображение";
