--- a/bg.lproj/PermissionsAccessoryView.strings
+++ b/bg.lproj/PermissionsAccessoryView.strings
@@ -1,3 +1,3 @@
 
 /* Class = "NSTextFieldCell"; title = "Pixea would like to access files in the selected image folder. Allow this to look for additional images for the slideshow and quick browsing. Click \"Grant Access\" to continue."; ObjectID = "Omr-FE-Xlm"; */
-"Omr-FE-Xlm.title" = "Pixea would like to access files in the selected image folder. Allow this to look for additional images for the slideshow and quick browsing. Click \"Grant Access\" to continue.";
+"Omr-FE-Xlm.title" = "Pixea иска достъп до файлове в избраната папка с изображения. Разрешете това, за да търсите допълнителни изображения за слайдшоуто и бързо преглеждане. Щракнете върху \"Предоставяне на достъп\", за да продължите.";
