--- a/bg.lproj/preferencesAccessViewController.strings
+++ b/bg.lproj/preferencesAccessViewController.strings
@@ -1,33 +1,33 @@
 
 /* Class = "NSTextFieldCell"; title = "When you open any image or video, Pixea tries to scan the file's parent folder for other media. If permission was not granted before, the dialog requesting you to grant access is displayed."; ObjectID = "9uZ-Tb-YpY"; */
-"9uZ-Tb-YpY.title" = "When you open any image or video, Pixea tries to scan the file's parent folder for other media. If permission was not granted before, the dialog requesting you to grant access is displayed.";
+"9uZ-Tb-YpY.title" = "Когато отворите изображение или видеоклип, Pixea се опитва да сканира основната папка на файла за други мултимедийни файлове. Ако преди това не е било разрешено, се показва диалоговият прозорец с искане да предоставите достъп.";
 
 /* Class = "NSButtonCell"; title = "Grant Access"; ObjectID = "C3O-re-5e7"; */
-"C3O-re-5e7.title" = "Grant Access";
+"C3O-re-5e7.title" = "Разрешете достъп";
 
 /* Class = "NSTextFieldCell"; title = "Pixea won't show \"Grant Access\" dialog when opening individual files if this option is unchecked. You will need to open a folder instead of an individual file to enable slideshow and media browsing features."; ObjectID = "C96-9R-xlJ"; */
-"C96-9R-xlJ.title" = "Pixea won't show \"Grant Access\" dialog when opening individual files if this option is unchecked. You will need to open a folder instead of an individual file to enable slideshow and media browsing features.";
+"C96-9R-xlJ.title" = "Pixea няма да покаже прозореца \"Разрешете достъп\" когато при отваряне на отделни файлове, ако тази опция не е маркирана. Ще трябва да отворите папка вместо отделен файл, за да активирате функциите за слайдшоу и разглеждане на медии.";
 
 /* Class = "NSTextFieldCell"; title = "Text Cell"; ObjectID = "Dzl-eQ-UQN"; */
-"Dzl-eQ-UQN.title" = "Text Cell";
+"Dzl-eQ-UQN.title" = "Клетка за текст";
 
 /* Class = "NSTextFieldCell"; title = "Folder"; ObjectID = "GQW-6p-mcS"; */
-"GQW-6p-mcS.title" = "Folder";
+"GQW-6p-mcS.title" = "Папка";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "Vjm-4n-4X9"; */
-"Vjm-4n-4X9.title" = "Box";
+"Vjm-4n-4X9.title" = "Каре"; //Box - perhaps another meaning to locate during i18n testing_optimization
 
 /* Class = "NSButtonCell"; title = "Ask for folder access when opening images"; ObjectID = "cW7-h4-Cgz"; */
-"cW7-h4-Cgz.title" = "Ask for folder access when opening images";
+"cW7-h4-Cgz.title" = "Попитайте за достъп до папка при отваряне на изображения";
 
 /* Class = "NSBox"; title = "Box"; ObjectID = "nBi-vL-aCO"; */
-"nBi-vL-aCO.title" = "Box";
+"nBi-vL-aCO.title" = "Каре";
 
 /* Class = "NSTextFieldCell"; title = "Allow Pixea to look for additional images and videos for the slideshow and quickly browse the following folders:"; ObjectID = "r28-NY-wGI"; */
-"r28-NY-wGI.title" = "Allow Pixea to look for additional images and videos for the slideshow and quickly browse the following folders:";
+"r28-NY-wGI.title" = "Позволете на Pixea да търси допълнителни изображения и видеоклипове за слайдшоуто и бързо да преглежда следните папки:";
 
 /* Class = "NSButtonCell"; title = "Manage Access..."; ObjectID = "sLh-AK-fC7"; */
-"sLh-AK-fC7.title" = "Manage Access...";
+"sLh-AK-fC7.title" = "Управление на достъпа...";
 
 /* Class = "NSTableColumn"; headerCell.title = "Folder"; ObjectID = "yrv-wp-W9z"; */
-"yrv-wp-W9z.headerCell.title" = "Folder";
+"yrv-wp-W9z.headerCell.title" = "Папка";
